manifest/my-pod-env-cm-script.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.27
    ports:
    - containerPort: 80
    command:
    - /bin/sh
    - -c
    - /mnt/script/message.sh
    volumeMounts:
    - name: my-script
      mountPath: /mnt/script
  volumes:
    - name: my-script
      configMap:
        name: my-script
        defaultMode: 0755
