manifest/my-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pvc
spec:
  containers:
  - name: nginx
    image: nginx:1.17
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvolume
  volumes:
  - name: myvolume
    persistentVolumeClaim:
      claimName: my-vol
