manifest/my-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sts
spec:
  serviceName: my-sts
  selector:
    matchLabels:
      app: my-sts
  updateStrategy:
    type: OnDelete
  replicas: 1
  template:
    metadata:
      labels:
        app: my-sts
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvolume
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: myvolume
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
