manifest/my-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web.192.168.59.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /hoge
        backend:
          service: 
            name: my-nginx-service
            port: 
              number: 80
